[package]
name = "apm-lyrics-ndp"
description = "Apple Music Lyrics Fetcher for Navidrome"
version = "0.1.0"
edition = "2024"

[lib]
crate-type = ["cdylib"]

[dependencies]
nd-pdk = { git = "https://github.com/navidrome/navidrome.git", rev = "4cbba2ae49401d7ccda606a2dbfcbee41d787857" }
extism-pdk = "1.2"
regex = "1.12.4"

lofty = "0.24.0"
mp4ameta = "0.13.0"

serde = { version = "1", features = ["derive"] }
serde_json = "1"

[profile.release]
lto = true
opt-level = "s"
codegen-units = 1
